Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -43,14 +43,7 @@ body {
     font-weight: bold;
 }
 
-h1 {
+h2, h3, h4 {
     margin: 0;
-}
-
-h2 {
-    margin: 0;
-}
-
-h3 {
-    margin: 0;
+    overflow: hidden;
 }
